Sto..Borrowed WebBukkit webserver code

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,6 @@ main: me.goldencookie.visuconomy.Visuconomy
 api-version: 1.17
 depend: [ Vault ]
 description: A way to visualize your server's economy!
+
+commands:
+  test-economy:
