--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'com.github.johnrengelman.shadow' version '7.0.0'
     id 'java'
 }
 
@@ -16,11 +17,16 @@ repositories {
         name = 'sonatype'
         url = 'https://oss.sonatype.org/content/groups/public/'
     }
+
 }
 
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.17.1-R0.1-SNAPSHOT'
-    compileOnly "com.github.MilkBowl:VaultAPI:1.7"
+    compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
+    implementation 'io.undertow:undertow-core:2.2.10.Final'
+    implementation 'io.undertow:undertow-servlet:2.2.10.Final'
+    implementation 'io.undertow:undertow-core:2.2.10.Final'
+    implementation 'commons-io:commons-io:20030203.000550'
 }
 
 def targetJavaVersion = 8
@@ -47,6 +53,6 @@ processResources {
         expand props
     }
 }
-jar {
+shadowJar {
     destinationDirectory.set(file("$buildDir/testServer/plugins"))
 }
